# in-hand-pose-estimation

./: .gitignore  CITATION.cff  README.md  setup.bash
in-hand-pose-estimation/: CMakeLists.txt
in_hand_pose_estimation/: package.xml
launch/: in_hand_pose_estimation.launch  tipe_srhand.launch
models/big_box/: model.config  model_dynamic.sdf  model_static.sdf
models/corners/: model.config  model_dynamic.sdf  model_static.sdf
models/cube/: model.config  model.sdf  model_dynamic.config  model_dynamic.sdf  model_static.config  model_static.sdf
models/edge/: model.config  model.sdf  model_dynamic.sdf  model_static.sdf
models/sphere/: model.config  model.sdf  model_dynamic.sdf  model_static.sdf
models/stanford_bunny/: model.config  model_dynamic.sdf  model_static.sdf
models/stanford_bunny/meshes/: stanford_bunny.ply
shadow_hand/: CMakeLists.txt  package.xml  setup.py
shadow_hand/config/: rh_world_joint_controller.yaml
shadow_hand/examples/: debug.py  demo_finger_control.py  finger_control_demo.py  hand_control_demo.py  robot_control_demo.py
shadow_hand/experiments/joint_trajectories/: plan_1.pickle  plan_2.pickle  plan_3.pickle
shadow_hand/launch/: demo_finger_control.launch  demo_shadow_hand.launch  demo_shadow_robot.launch  example.launch  finger_control_demo.launch  load_robot_description.launch  shadow_hand.launch  srhand.launch
shadow_hand/robots/: load_robot_description.launch  shadow_finger.srdf.xacro  shadow_hand.launch  shadow_hand.srdf.xacro  shadow_hand.urdf.xacro  sr_hand.urdf.xacro  srhand_ur.urdf.xacro
shadow_hand/src/shadow_hand/: ContactPoint.py  ShadowComponent.py  ShadowFinger.py  ShadowHand.py  ShadowWrist.py  __init__.py
sr_tactile_image/: CMakeLists.txt  package.xml  setup.py
sr_tactile_image/launch/: shadowhand.launch  sr_tactile_image.launch  sr_test.launch  sr_vms.launch
sr_tactile_image/nodes/: sr_test.py
sr_tactile_image/src/: sr_tactile_image.cpp  sr_test.cpp
sr_tactile_image/worlds/: shadowhand.world
sr_tactile_image_cpp/: package.xml
sr_tactile_image_cpp/config/: std.yaml
sr_tactile_image_cpp/launch/: sr_test_better_arguments.launch  sr_test_cpp.launch
sr_tactile_image_cpp/src/: sr_test_cpp.cpp
sr_tactile_image_cpp/worlds/: shadowhand.world
sr_tactile_perception/: CMakeLists.txt  README.md  __init__.py  package.xml  setup.py
sr_tactile_perception/data/: 20230214_000000.json  20230216_000000.json  20230217_000000.json  20230220_000000.json  20230221_000000.json  20230222_000000.json  20230223_000000.json  20230224_000000.json  stat_20230227_000000.json
sr_tactile_perception/data/post-thesis-tests/: 20230606_104240
sr_tactile_perception/launch/: sr_load_prop.launch  sr_tac_percep.launch  sr_tactile_perception.launch  sr_test.launch  tipe_sr_tac_percep.launch  tipe_srhand.launch
sr_tactile_perception/launch/additional/: shadowhand.srdf.xacro  shadowhands_prefix.srdf.xacro
sr_tactile_perception/nodes/: echo.py  test.py
sr_tactile_perception/scripts/: constants.py  data_handler.py  pc_generation.ipynb  sr_tactile_perception.py  stats.ipynb  stats.py  tac_plot.ipynb  utils.py  velocity_calc.ipynb
sr_tactile_perception/scripts/save_data/q_data/: test.csv
sr_tactile_perception/scripts/save_data/vel_data/: vel_data.csv
sr_tactile_perception/src/: sr_tactile_perception.py  test.py
sr_tactile_perception/worlds/: sr_tac_percep_w_g_w_props.world  sr_tac_percep_wo_g_w_props.world  sr_tactile_perception.world
worlds/: in_hand_pose_estimation.world  in_hand_pose_estimation_w_g_wo_props.world  in_hand_pose_estimation_wo_g_w_props.world  in_hand_pose_estimation_wo_g_wo_props.world  sr_tac_percep_w_g.world  sr_tac_percep_w_g_w_props.world  sr_tac_percep_wo_g.world
