<?xml version="1.0"?>
<package format="2">

	<name>in_hand_pose_estimation</name>
	<version>1.0.0</version>
	<description>Metapackage for in-hand pose estimation for the Shadow Dextereous hand</description>

	<author email="vista17@student.sdu.dk">Victor Staven</author>
	<maintainer email="vista17@student.sdu.dk">Victor Staven</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/vmstavens/in_hand_pose_estimation</url>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>shadow_hand</exec_depend>
	<exec_depend>sr_tactile_perception</exec_depend>
	<exec_depend>biotac_gazebo_plugin</exec_depend>

	<export>
		<metapackage />
	</export>

</package>