<?xml version="1.0"?>
<package format="2">

	<name>in_hand_pose_estimation</name>
	<version>1.0.0</version>
	<description>Metapackage for in-hand pose estimation for the Shadow Dextereous hand</description>

	<author email="victorstaven@gmail.com">Victor Staven</author>
	<maintainer email="victorstaven@gmail.com">Victor Staven</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/vmstavens/in_hand_pose_estimation</url>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>shadow_hand</exec_depend>
	<exec_depend>sr_tactile_perception</exec_depend>
	<exec_depend>biotac_sim_plugin</exec_depend>

	<export>
		<metapackage />
		<!-- to make local models visible -->
		<gazebo_ros gazebo_model_path="${prefix}/models" />
		<gazebo_ros gazebo_media_path="${prefix}/models"/>
	</export>

</package>