<?xml version="1.0"?>
<package format="2">

	<name>sr_tactile_image</name>
	<version>1.0.0</version>
	<description>sr_tactile_image desciption</description>

	<author email="vista17@student.sdu.dk">Victor Melbye Staven</author>
	<maintainer email="vista17@student.sdu.dk">Victor Melbye Staven</maintainer>

	<license>BSD</license>

	<!-- build tool -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- ROS packages -->
	<depend>roscpp</depend>
	<depend>sr_utilities</depend>
	<depend>sr_robot_msgs</depend>
	<depend>sr_hand</depend>

</package>