<?xml version="1.0"?>
<package format="2">

	<name>sr_tactile_perception</name>
	<version>1.0.0</version>
	<description>sr_tactile_perception desciption</description>

	<author email="vista17@student.sdu.dk">Victor Melbye Staven</author>
	<maintainer email="vista17@student.sdu.dk">Victor Melbye Staven</maintainer>

	<license>BSD</license>

	<!-- build tool -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- ROS packages -->
	<depend>rospy</depend>
	<depend>geometry_msgs</depend>
	<depend>ros_utils_py</depend>
	<depend>shadow_hand</depend>
	<depend>gazebo_msgs</depend>

	<export>
		<gazebo_ros gazebo_model_path="${prefix}/../models" gazebo_media_path="${prefix}/../models" />
		<!-- <gazebo_ros gazebo_media_path="${prefix}/../models" /> -->
	</export>

</package>